.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Replaced mail host with a standard mail host. This completes the basic
  implementation of http://dev.plone.org/plone/ticket/8814.
  [hannosch]

- Added icon_expr property to the Plone control panel tool actions, and
  switched to registering configlet icons here instead of in the action
  icons tool.
  [davisagli]

- Moved the diff tool registration to this package, so it can still be a tool
  for Plone 4.
  [davisagli]

- Use the new zope.ramcache in favor of zope.app.cache.
  [hannosch]

- Removed GroupUserFolder skin layers.
  [davisagli]

- Silenced the deprecation warning about old-style actions from CMFCore's
  ActionProviderBase when listing configlets with the control panel tool.
  [davisagli]

- Added the _IMREALLYPLONE4 hint to factory.py for PloneTestCase to use.
  [hannosch]

- Removed the calendar and review portlets from the standard global
  assignments. The review list is better put onto a personal dashboard and the
  calendar is exceptionally slow and rather user unfriendly. The news and
  events portlets are a better fit to show-case the portlets system.
  [hannosch]

- Include the `overrides.zcml` from `Products.PlacelessTranslationService` to
  actually make PTS' language negotiator available to the zope.i18n machinery.
  [hannosch]

- Got rid of the ToolNames indirection and declared the meta_types directly
  in the relevant tool class themselves.
  [hannosch]

- Moved ATCT specific exportimport code into the ATCT package itself.
  [hannosch]

- Made sure the plone.indexer registration works by introducing a more
  specific IPloneCatalogTool marker interface and registering the indexable
  object wrapper for this.
  [optilude]

- Added a restricted version of the opaqueItems method for CMFCatalogAware.